[gd_scene load_steps=14 format=3 uid="uid://cnyjve7swbkgo"]

[ext_resource type="Script" path="res://Script/main_screen.gd" id="1_cw3ro"]
[ext_resource type="Texture2D" uid="uid://cp2ihio3arb2b" path="res://Art/PlayON.png" id="2_aihsv"]
[ext_resource type="Texture2D" uid="uid://cjw63to7ulatk" path="res://Art/ExitON (1).png" id="3_yhh1u"]
[ext_resource type="Texture2D" uid="uid://dt2wxue36hf2f" path="res://Art/Forest Path Layer6.png" id="4_l5yef"]
[ext_resource type="Texture2D" uid="uid://cfp613x4lldt7" path="res://Art/Forest Path Layer5.png" id="5_ekjph"]
[ext_resource type="Texture2D" uid="uid://bogr6jhuw7dk3" path="res://Art/Forest Path Layer4.png" id="6_u0wdp"]
[ext_resource type="Texture2D" uid="uid://vtujkaonyb2u" path="res://Art/Forest Path Layer3.png" id="7_aa3y8"]
[ext_resource type="Texture2D" uid="uid://du0ti54aita7a" path="res://Art/Forest Path Layer2.png" id="8_pt76m"]
[ext_resource type="Texture2D" uid="uid://ckkk6x3wn7akt" path="res://Art/Forest Path Layer1.png" id="9_fdmp6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1wnjq"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Animation" id="Animation_6ikhi"]
resource_name = "Elastic_Title"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0.352941, 0, 0), Color(0, 0.352941, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:theme_override_colors/font_shadow_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:theme_override_colors/font_outline_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.388235, 0.592157, 0.141176, 0), Color(0.388235, 0.592157, 0.141176, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ParallaxBackground/ParallaxLayer/Sprite2D6:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [16, 1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ParallaxBackground/ParallaxLayer/Sprite2D5:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [16, 1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ParallaxBackground/ParallaxLayer/Sprite2D4:hframes")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [16, 1]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ParallaxBackground/ParallaxLayer/Sprite2D3:hframes")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [16, 1]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("ParallaxBackground/ParallaxLayer/Sprite2D2:hframes")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [16, 1]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("ParallaxBackground/ParallaxLayer/Sprite2D:hframes")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [16, 1]
}

[sub_resource type="Animation" id="Animation_1gno3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0.352941, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:theme_override_colors/font_shadow_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:theme_override_colors/font_outline_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.388235, 0.592157, 0.141176, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ParallaxBackground/ParallaxLayer/Sprite2D6:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ParallaxBackground/ParallaxLayer/Sprite2D5:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ParallaxBackground/ParallaxLayer/Sprite2D4:hframes")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ParallaxBackground/ParallaxLayer/Sprite2D3:hframes")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("ParallaxBackground/ParallaxLayer/Sprite2D2:hframes")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("ParallaxBackground/ParallaxLayer/Sprite2D:hframes")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i8ivk"]
_data = {
"Elastic_Title": SubResource("Animation_6ikhi"),
"RESET": SubResource("Animation_1gno3")
}

[node name="MainScreen" type="Node2D"]
script = ExtResource("1_cw3ro")

[node name="Play" type="TextureButton" parent="."]
offset_left = 444.0
offset_top = 273.0
offset_right = 756.0
offset_bottom = 585.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("2_aihsv")

[node name="Run_Away" type="TextureButton" parent="."]
offset_left = 458.0
offset_top = 461.0
offset_right = 672.0
offset_bottom = 669.0
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("3_yhh1u")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D6" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(576, 324)
scale = Vector2(5.76, 5.0625)
texture = ExtResource("4_l5yef")

[node name="Sprite2D5" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(576, 324)
scale = Vector2(5.76, 5.063)
texture = ExtResource("5_ekjph")

[node name="Sprite2D4" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(576, 324)
scale = Vector2(5.76, 5.063)
texture = ExtResource("6_u0wdp")

[node name="Sprite2D3" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(576, 324)
scale = Vector2(5.76, 5.063)
texture = ExtResource("7_aa3y8")
hframes = 16

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(576, 324)
scale = Vector2(5.76, 5.063)
texture = ExtResource("8_pt76m")

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(576, 324)
scale = Vector2(5.76, 5.063)
texture = ExtResource("9_fdmp6")
hframes = 16

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/ParallaxLayer"]
offset_left = -2.0
offset_right = 208.0
offset_bottom = 128.0
scale = Vector2(5.5, 5.063)
color = Color(0.466667, 0.627451, 0, 0.247059)

[node name="Label" type="Label" parent="."]
offset_left = 269.0
offset_top = 64.0
offset_right = 839.0
offset_bottom = 201.0
theme_override_colors/font_color = Color(0, 0.352941, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.388235, 0.592157, 0.141176, 1)
theme_override_constants/shadow_offset_x = 15
theme_override_constants/shadow_offset_y = 15
theme_override_constants/outline_size = 15
theme_override_constants/shadow_outline_size = 10
theme_override_constants/line_spacing = 15
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_1wnjq")
text = "T e r r a r i a"

[node name="Label2" type="Label" parent="."]
offset_left = 409.0
offset_top = 200.0
offset_right = 676.0
offset_bottom = 255.0
theme_override_colors/font_color = Color(0.415686, 0.847059, 0.113725, 1)
theme_override_colors/font_shadow_color = Color(0.160784, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "live for skibidi
"

[node name="Label3" type="Label" parent="."]
offset_left = 104.0
offset_top = 594.0
offset_right = 647.0
offset_bottom = 649.0
theme_override_colors/font_color = Color(0.992157, 0.87451, 0.890196, 1)
theme_override_colors/font_shadow_color = Color(0.270588, 0.956863, 0, 1)
theme_override_colors/font_outline_color = Color(0, 1, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 30
text = "Click i for more info upon arrival"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_i8ivk")
}

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Run_Away" to="." method="_on_run_away_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
